[package]
name = "d-book-repository"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
futures = "0.3.21"
libp2p = "0.45.1"
libp2p-request-response = "0.18.0"
proconio = "0.4.3"
async-std = { version = "1.6.2", features = ["attributes"] }
env_logger = "0.9.0"
clap = {version = "3.1.6", features = ["derive"]}
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }

[[default-run]]
path = "src/main.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "get_files"
path = "src/get_files.rs"
